# claude_todo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: __init__.py  container.py
src/api/: app.py
src/api/routes/: __init__.py  tasks.py  webhooks.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  models.py  protocols.py
src/mcp/: __init__.py  tools.py
src/notifications/: __init__.py  discord_sender.py  print_webhook_sender.py
src/parsers/: __init__.py  discord_parser.py  slack_parser.py
src/repositories/: __init__.py  memory.py  notion.py
src/scheduler/: __init__.py  jobs.py  scheduler.py
src/services/: __init__.py  mention_service.py  notification_service.py  sync_service.py  task_service.py
tests/: __init__.py  conftest.py
tests/api/: test_tasks.py  test_webhooks.py
tests/cli/: test_cli.py
tests/unit/: test_container.py  test_mcp_tools.py  test_memory_repository.py  test_mention_service.py  test_models.py  test_notification_service.py  test_notion_repository.py  test_scheduler.py  test_settings.py  test_task_service.py
