[project]
name = "claude-todo"
version = "0.1.0"
description = "Task management system with Notion, Slack, Discord integration for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "notion-client>=2.0.0",
    "slack-sdk>=3.27.0",
    "click>=8.0.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
claude-todo = "src.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
